syntax = "proto3";

package storage;

option go_package = ".;proto";

import "gorums.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Storage {
  // ReadRPC executes the Read RPC on a single Node
  rpc ReadRPC(ReadRequest) returns (ReadResponse) {}
  // WriteRPC executes the Write RPC on a single Node
  rpc WriteRPC(WriteRequest) returns (WriteResponse) {}
  // ReadQC executes the Read Quorum Call on a configuration
  // of Nodes and returns the most recent value.
  rpc ReadQC(ReadRequest) returns (ReadResponse) {
    option (gorums.quorumcall) = true;
  }
  // WriteQC executes the Write Quorum Call on a configuration
  // of Nodes and returns true if a majority of Nodes were updated.
  rpc WriteQC(WriteRequest) returns (WriteResponse) {
    option (gorums.quorumcall) = true;
  }

  rpc WriteMulticast(WriteRequest) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }

  rpc ListKeysRPC(ListRequest) returns (ListResponse) {}

  rpc ListKeysQC(ListRequest) returns (ListResponse) {
    option (gorums.quorumcall) = true;
  }

  rpc WriteMetaConfQC(MetaConfig) returns (WriteResponse) {
    option (gorums.quorumcall) = true;
  }
}

// A message containing meta information for a configuration
message MetaConfig {
  bool Started = 1;
  string Adds = 2;
  google.protobuf.Timestamp Time = 3;
}

message ReadRequest { string Key = 1; }

message ReadResponse {
  bool OK = 1;
  string Value = 2;
  google.protobuf.Timestamp Time = 3;
  repeated MetaConfig MConfigs = 4;
}

message WriteRequest {
  string Key = 1;
  string Value = 2;
  google.protobuf.Timestamp Time = 3;
}

message WriteResponse { 
  bool New = 1; 
  repeated MetaConfig MConfigs = 2;
}

message ListRequest { }

message ListResponse {
  repeated string Keys = 1;
  repeated MetaConfig MConfigs = 2;
}